// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3 url insert 1`] = `
Array [
  Object {
    "pathname": "/",
    "scroll": 0,
  },
  Object {
    "pathname": "/foo",
    "scroll": 0,
  },
  Object {
    "pathname": "/bar",
    "scroll": 0,
  },
]
`;

exports[`no array in first param 1`] = `
Array [
  Object {
    "pathname": "/",
    "scroll": 0,
  },
]
`;

exports[`only 2 params 1`] = `
Array [
  Object {
    "pathname": "/",
    "scroll": 0,
  },
]
`;
